Add network health checks and robust error handling
Introduces NetworkHealthService for proactive monitoring of DNS, Discord, and OpenRouter connectivity. Enhances DiscordListener and OpenRouterService with more informative user messages and retry logic for network errors. Updates JdaConfig to use a custom OkHttpClient with configurable retry and timeout settings. Adds new configuration options for retry and health checks in application.properties and documents them in the README. Dockerfile now sets the Europe/Rome timezone.